--- a/index.html
+++ b/index.html
@@ -180,6 +180,17 @@
 			<div id="main">
 				<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 			</div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-96369037-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 
 	<script>
 			function openNav() {
@@ -203,7 +214,7 @@
 <img src="ha.jpg" alt="My Pic" width="304px" height="228px">
 
 </div>
-<a href="https://www.linkedin.com/in/harish-chittoor-622283ba/"><br><br><br><br><br><img src="li.png" alt="LinkedIn" style="width:6%;margin-left:685px"></a>
+<a href="https://www.linkedin.com/in/harish-chittoor-622283ba/"><br><br><br><br><br><img src="Li.png" alt="LinkedIn" style="width:6%;margin-left:685px"></a>
 
 		<footer><b>All rights reserved @ Harish</b></footer>
 	</div>
